# podcast-clipper

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  railway.json  vercel.json  vitest.client.config.ts
.vercel/: project.json
docs/: ARCHITECTURE.md  AUDIT.md
e2e/: app-loads.spec.ts  app-navigation.spec.ts  app-shell.spec.ts  auth-flow.spec.ts  auth.spec.ts  debug-app.spec.ts  episode-workflow.spec.ts  error-handling.spec.ts  navigation.spec.ts  podcast-crud.spec.ts
e2e/helpers/: auth.ts
server/: index.ts  vitest.config.ts
server/__tests__/: setup.ts
server/db/: index.ts  schema.ts
server/lib/: audio-sync.ts  error-sanitizer.ts  file-security.ts  media-storage.ts  process-manager.ts  r2-storage.ts  retry.ts  token-storage.ts
server/middleware/: auth.ts  podcastAuth.ts  rateLimit.ts
server/routes/: auth.ts  episode-timelines.ts  episodes.ts  generate-snippet.ts  media-assets.ts  oauth.ts  podcast-branding-assets.ts  podcasts.ts  projects.ts  render.ts  text-snippets.ts  transcribe.ts  uploads.ts  video-sources.ts
server/services/: authService.ts  emailService.ts
server/utils/: validateEnv.ts
shared/: clipTransform.ts  computeWordGroups.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/__tests__/: setup-browser-globals.ts
src/components/: ErrorBoundary.tsx  Layout.tsx  ProjectsView.tsx
src/hooks/: useBrandingAssets.ts  useChunkedUpload.ts  useEpisodes.ts  useKeyboardShortcuts.ts  useMultiVideoUpload.ts  (+5 more)
(+122 files in other folders)
