[package]
name = "podcast-clipper"
version = "0.1.0"
description = "Create engaging video clips from podcast episodes"
authors = ["you"]
edition = "2021"

[lib]
name = "podcast_clipper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
uuid = { version = "1", features = ["v4"] }

